docs | css: fix design on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -96,7 +96,7 @@
 /* Responsive Styles */
 @media (max-width: 768px) {
   .sp_container {
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -117,8 +117,8 @@
   }
 
   .sp_container .logo {
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
   }
 
   .sp_container h1 {
